package com.autonomous.api.grpc

import io.grpc.stub.StreamObserver
import net.devh.boot.grpc.server.service.GrpcService

@GrpcService
class MLBridgeServiceImpl : MLBridgeServiceGrpc.MLBridgeServiceImplBase() {

    override fun predictMissionRisk(request: PredictMissionRiskRequest, responseObserver: StreamObserver<PredictMissionRiskResponse>) {
        // Implementation
        val response = PredictMissionRiskResponse.newBuilder()
            .setMissionId(request.missionId)
            .setMissionType(request.missionType)
            .setRiskScore(0.35)
            .setRiskLevel("MEDIUM")
            .setRiskAnalysis("Weather is clear, traffic is moderate, battery level is medium")
            .setPredictedAt(com.google.protobuf.Timestamp.getDefaultInstance())
            .build()

        responseObserver.onNext(response)
        responseObserver.onCompleted()
    }

    override fun predictBatteryLevel(request: PredictBatteryLevelRequest, responseObserver: StreamObserver<PredictBatteryLevelResponse>) {
        // Implementation
        val response = PredictBatteryLevelResponse.newBuilder()
            .setMissionId(request.missionId)
            .setPredictedBatteryVoltage(22.5)
            .setBatteryLevel("MEDIUM")
            .setBatteryAnalysis("Battery level prediction based on current voltage and payload")
            .setPredictedAt(com.google.protobuf.Timestamp.getDefaultInstance())
            .build()

        responseObserver.onNext(response)
        responseObserver.onCompleted()
    }

    override fun predictEnergyConsumption(request: PredictEnergyConsumptionRequest, responseObserver: StreamObserver<PredictEnergyConsumptionResponse>) {
        // Implementation
        val response = PredictEnergyConsumptionResponse.newBuilder()
            .setMissionId(request.missionId)
            .setPredictedEnergyConsumptionWh(4500.0)
            .setEnergyAnalysis("Energy consumption prediction based on distance and payload")
            .setPredictedAt(com.google.protobuf.Timestamp.getDefaultInstance())
            .build()

        responseObserver.onNext(response)
        responseObserver.onCompleted()
    }

    override fun predictWeatherImpact(request: PredictWeatherImpactRequest, responseObserver: StreamObserver<PredictWeatherImpactResponse>) {
        // Implementation
        val response = PredictWeatherImpactResponse.newBuilder()
            .setMissionId(request.missionId)
            .setWeatherCondition(request.weatherCondition)
            .setDelaySeconds(1800.0)
            .setEnergyIncreasePercentage(0.15)
            .setWeatherAnalysis("Rainy conditions cause moderate delay and energy increase")
            .setPredictedAt(com.google.protobuf.Timestamp.getDefaultInstance())
            .build()

        responseObserver.onNext(response)
        responseObserver.onCompleted()
    }

    override fun predictTrafficImpact(request: PredictTrafficImpactRequest, responseObserver: StreamObserver<PredictTrafficImpactResponse>) {
        // Implementation
        val response = PredictTrafficImpactResponse.newBuilder()
            .setMissionId(request.missionId)
            .setTrafficCondition(request.trafficCondition)
            .setDelaySeconds(900.0)
            .setEnergyIncreasePercentage(0.1)
            .setTrafficAnalysis("Moderate traffic conditions cause slight delay and energy increase")
            .setPredictedAt(com.google.protobuf.Timestamp.getDefaultInstance())
            .build()

        responseObserver.onNext(response)
        responseObserver.onCompleted()
    }
}